[package]
name = "pick"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.13.0"

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
http = ["eframe/http"]
persistence = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2

[patch.crates-io]
